--- a/arch/arm/configs/movis_e_defconfig
+++ b/arch/arm/configs/movis_e_defconfig
@@ -869,10 +869,12 @@ CONFIG_CFG80211=y
 # CONFIG_NL80211_TESTMODE is not set
 # CONFIG_CFG80211_DEVELOPER_WARNINGS is not set
 # CONFIG_CFG80211_REG_DEBUG is not set
-# CONFIG_CFG80211_CERTIFICATION_ONUS is not set
+CONFIG_CFG80211_CERTIFICATION_ONUS=y
+# CONFIG_CFG80211_REG_CELLULAR_HINTS is not set
+# CONFIG_CFG80211_REG_RELAX_NO_IR is not set
 CONFIG_CFG80211_DEFAULT_PS=y
 # CONFIG_CFG80211_DEBUGFS is not set
-# CONFIG_CFG80211_INTERNAL_REGDB is not set
+CONFIG_CFG80211_INTERNAL_REGDB=y
 CONFIG_CFG80211_CRDA_SUPPORT=y
 # CONFIG_CFG80211_WEXT is not set
 CONFIG_LIB80211=y
@@ -1593,6 +1595,7 @@ CONFIG_WLAN=y
 CONFIG_ATH_COMMON=y
 CONFIG_ATH_CARDS=y
 # CONFIG_ATH_DEBUG is not set
+# CONFIG_ATH_REG_DYNAMIC_USER_REG_HINTS is not set
 # CONFIG_ATH5K is not set
 # CONFIG_ATH5K_PCI is not set
 CONFIG_ATH9K_HW=y
@@ -1609,6 +1612,7 @@ CONFIG_ATH10K=y
 CONFIG_ATH10K_PCI=y
 # CONFIG_ATH10K_DEBUG is not set
 # CONFIG_ATH10K_DEBUGFS is not set
+# CONFIG_ATH10K_DFS_CERTIFIED is not set
 # CONFIG_WCN36XX is not set
 # CONFIG_B43 is not set
 # CONFIG_B43LEGACY is not set
