--- a/arch/arm/configs/movis_e_defconfig
+++ b/arch/arm/configs/movis_e_defconfig
@@ -16,7 +16,6 @@ CONFIG_GENERIC_HWEIGHT=y
 CONFIG_GENERIC_CALIBRATE_DELAY=y
 CONFIG_NEED_DMA_MAP_STATE=y
 CONFIG_ARCH_SUPPORTS_UPROBES=y
-CONFIG_FIQ=y
 CONFIG_VECTORS_BASE=0xffff0000
 CONFIG_ARM_PATCH_PHYS_VIRT=y
 CONFIG_GENERIC_BUG=y
@@ -69,6 +68,7 @@ CONFIG_HANDLE_DOMAIN_IRQ=y
 # CONFIG_IRQ_DOMAIN_DEBUG is not set
 CONFIG_IRQ_FORCED_THREADING=y
 CONFIG_SPARSE_IRQ=y
+CONFIG_GENERIC_TIME_VSYSCALL=y
 CONFIG_GENERIC_CLOCKEVENTS=y
 CONFIG_ARCH_HAS_TICK_BROADCAST=y
 CONFIG_GENERIC_CLOCKEVENTS_BROADCAST=y
@@ -322,7 +322,6 @@ CONFIG_ARCH_MULTI_V6_V7=y
 # CONFIG_ARCH_KEYSTONE is not set
 # CONFIG_ARCH_MESON is not set
 CONFIG_ARCH_MXC=y
-CONFIG_MXC_TZIC=y
 CONFIG_HAVE_IMX_ANATOP=y
 CONFIG_HAVE_IMX_GPC=y
 CONFIG_HAVE_IMX_MMDC=y
@@ -335,24 +334,21 @@ CONFIG_HAVE_IMX_SRC=y
 #
 # Cortex-A platforms
 #
-CONFIG_SOC_IMX5=y
-CONFIG_SOC_IMX50=y
-CONFIG_SOC_IMX51=y
-CONFIG_SOC_IMX53=y
+# CONFIG_SOC_IMX50 is not set
+# CONFIG_SOC_IMX51 is not set
+# CONFIG_SOC_IMX53 is not set
 CONFIG_SOC_IMX6=y
 CONFIG_SOC_IMX6Q=y
 CONFIG_SOC_IMX6SL=y
 CONFIG_SOC_IMX6SX=y
-# CONFIG_SOC_IMX6UL is not set
+CONFIG_SOC_IMX6UL=y
 # CONFIG_SOC_IMX7D is not set
 # CONFIG_SOC_LS1021A is not set
 
 #
 # Cortex-A/Cortex-M asymmetric multiprocessing platforms
 #
-CONFIG_SOC_VF610=y
-CONFIG_VF_USE_ARM_GLOBAL_TIMER=y
-# CONFIG_VF_USE_PIT_TIMER is not set
+# CONFIG_SOC_VF610 is not set
 # CONFIG_ARCH_MEDIATEK is not set
 
 #
@@ -410,7 +406,7 @@ CONFIG_SWP_EMULATE=y
 # CONFIG_CPU_ICACHE_DISABLE is not set
 # CONFIG_CPU_BPREDICT_DISABLE is not set
 CONFIG_KUSER_HELPERS=y
-# CONFIG_VDSO is not set
+CONFIG_VDSO=y
 CONFIG_OUTER_CACHE=y
 CONFIG_OUTER_CACHE_SYNC=y
 CONFIG_MIGHT_HAVE_CACHE_L2X0=y
@@ -426,7 +422,7 @@ CONFIG_ARM_HEAVY_MB=y
 # CONFIG_ARM_KERNMEM_PERMS is not set
 CONFIG_MULTI_IRQ_HANDLER=y
 # CONFIG_ARM_ERRATA_430973 is not set
-# CONFIG_ARM_ERRATA_643719 is not set
+CONFIG_ARM_ERRATA_643719=y
 # CONFIG_ARM_ERRATA_720789 is not set
 CONFIG_ARM_ERRATA_754322=y
 # CONFIG_ARM_ERRATA_754327 is not set
@@ -482,15 +478,15 @@ CONFIG_ARM_CPU_TOPOLOGY=y
 # CONFIG_SCHED_MC is not set
 # CONFIG_SCHED_SMT is not set
 CONFIG_HAVE_ARM_SCU=y
-# CONFIG_HAVE_ARM_ARCH_TIMER is not set
+CONFIG_HAVE_ARM_ARCH_TIMER=y
 CONFIG_HAVE_ARM_TWD=y
 # CONFIG_MCPM is not set
 # CONFIG_BIG_LITTLE is not set
-# CONFIG_VMSPLIT_3G is not set
+CONFIG_VMSPLIT_3G=y
 # CONFIG_VMSPLIT_3G_OPT is not set
-CONFIG_VMSPLIT_2G=y
+# CONFIG_VMSPLIT_2G is not set
 # CONFIG_VMSPLIT_1G is not set
-CONFIG_PAGE_OFFSET=0x80000000
+CONFIG_PAGE_OFFSET=0xC0000000
 CONFIG_NR_CPUS=4
 CONFIG_HOTPLUG_CPU=y
 # CONFIG_ARM_PSCI is not set
@@ -515,7 +511,7 @@ CONFIG_AEABI=y
 # CONFIG_ARCH_SELECT_MEMORY_MODEL is not set
 CONFIG_HAVE_ARCH_PFN_VALID=y
 CONFIG_HIGHMEM=y
-# CONFIG_HIGHPTE is not set
+CONFIG_HIGHPTE=y
 CONFIG_CPU_SW_DOMAIN_PAN=y
 CONFIG_HW_PERF_EVENTS=y
 CONFIG_ARCH_WANT_GENERAL_HUGETLB=y
@@ -604,14 +600,7 @@ CONFIG_ARM_IMX6Q_CPUFREQ=y
 #
 # CPU Idle
 #
-CONFIG_CPU_IDLE=y
-CONFIG_CPU_IDLE_GOV_LADDER=y
-CONFIG_CPU_IDLE_GOV_MENU=y
-
-#
-# ARM CPU Idle Drivers
-#
-# CONFIG_ARM_CPUIDLE is not set
+# CONFIG_CPU_IDLE is not set
 # CONFIG_ARCH_NEEDS_CPU_IDLE_COUPLED is not set
 
 #
@@ -1053,7 +1042,6 @@ CONFIG_MTD_NAND_IDS=y
 CONFIG_MTD_NAND_GPMI_NAND=y
 # CONFIG_MTD_NAND_BRCMNAND is not set
 # CONFIG_MTD_NAND_PLATFORM is not set
-# CONFIG_MTD_NAND_VF610_NFC is not set
 CONFIG_MTD_NAND_MXC=y
 # CONFIG_MTD_NAND_HISI504 is not set
 # CONFIG_MTD_ONENAND is not set
@@ -1984,7 +1972,6 @@ CONFIG_SPI_BITBANG=y
 # CONFIG_SPI_GPIO is not set
 CONFIG_SPI_IMX=y
 # CONFIG_SPI_FSL_SPI is not set
-# CONFIG_SPI_FSL_DSPI is not set
 # CONFIG_SPI_OC_TINY is not set
 # CONFIG_SPI_PXA2XX is not set
 # CONFIG_SPI_PXA2XX_PCI is not set
@@ -2039,20 +2026,16 @@ CONFIG_PINCONF=y
 # CONFIG_PINCTRL_AMD is not set
 # CONFIG_PINCTRL_SINGLE is not set
 CONFIG_PINCTRL_IMX=y
-CONFIG_PINCTRL_IMX50=y
-CONFIG_PINCTRL_IMX51=y
-CONFIG_PINCTRL_IMX53=y
 CONFIG_PINCTRL_IMX6Q=y
 CONFIG_PINCTRL_IMX6SL=y
 CONFIG_PINCTRL_IMX6SX=y
-CONFIG_PINCTRL_VF610=y
+CONFIG_PINCTRL_IMX6UL=y
 CONFIG_ARCH_HAVE_CUSTOM_GPIO_H=y
 CONFIG_ARCH_WANT_OPTIONAL_GPIOLIB=y
 CONFIG_ARCH_REQUIRE_GPIOLIB=y
 CONFIG_GPIOLIB=y
 CONFIG_GPIO_DEVRES=y
 CONFIG_OF_GPIO=y
-CONFIG_GPIOLIB_IRQCHIP=y
 # CONFIG_DEBUG_GPIO is not set
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_GENERIC=y
@@ -2068,7 +2051,6 @@ CONFIG_GPIO_GENERIC=y
 # CONFIG_GPIO_GRGPIO is not set
 CONFIG_GPIO_MXC=y
 # CONFIG_GPIO_SYSCON is not set
-CONFIG_GPIO_VF610=y
 # CONFIG_GPIO_VX855 is not set
 # CONFIG_GPIO_XILINX is not set
 # CONFIG_GPIO_ZEVIO is not set
@@ -2142,7 +2124,16 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_CHARGER_SMB347 is not set
 # CONFIG_BATTERY_GAUGE_LTC2941 is not set
 # CONFIG_CHARGER_RT9455 is not set
-# CONFIG_POWER_RESET is not set
+CONFIG_POWER_RESET=y
+# CONFIG_POWER_RESET_BRCMSTB is not set
+# CONFIG_POWER_RESET_GPIO is not set
+# CONFIG_POWER_RESET_GPIO_RESTART is not set
+CONFIG_POWER_RESET_IMX=y
+# CONFIG_POWER_RESET_LTC2952 is not set
+# CONFIG_POWER_RESET_RESTART is not set
+# CONFIG_POWER_RESET_VERSATILE is not set
+CONFIG_POWER_RESET_SYSCON=y
+CONFIG_POWER_RESET_SYSCON_POWEROFF=y
 # CONFIG_POWER_AVS is not set
 CONFIG_HWMON=y
 # CONFIG_HWMON_VID is not set
@@ -2291,7 +2282,7 @@ CONFIG_CPU_THERMAL=y
 # CONFIG_THERMAL_EMULATION is not set
 CONFIG_IMX_THERMAL=y
 CONFIG_WATCHDOG=y
-# CONFIG_WATCHDOG_CORE is not set
+CONFIG_WATCHDOG_CORE=y
 # CONFIG_WATCHDOG_NOWAYOUT is not set
 
 #
@@ -2304,7 +2295,7 @@ CONFIG_WATCHDOG=y
 # CONFIG_CADENCE_WATCHDOG is not set
 # CONFIG_DW_WATCHDOG is not set
 # CONFIG_MAX63XX_WATCHDOG is not set
-# CONFIG_IMX2_WDT is not set
+CONFIG_IMX2_WDT=y
 # CONFIG_ALIM7101_WDT is not set
 # CONFIG_I6300ESB_WDT is not set
 # CONFIG_BCM7038_WDT is not set
@@ -3001,7 +2992,6 @@ CONFIG_SND_SOC_IMX_PCM_DMA=y
 CONFIG_SND_SOC_IMX_AUDMUX=y
 CONFIG_SND_IMX_SOC=y
 CONFIG_SND_SOC_IMX_SSI=y
-CONFIG_SND_SOC_IMX_PCM_FIQ=y
 
 #
 # SoC Audio support for Freescale i.MX boards:
@@ -3831,9 +3821,9 @@ CONFIG_COMMON_CLK=y
 CONFIG_CLKSRC_OF=y
 CONFIG_CLKSRC_PROBE=y
 CONFIG_CLKSRC_MMIO=y
-CONFIG_ARM_GLOBAL_TIMER=y
+CONFIG_ARM_ARCH_TIMER=y
+CONFIG_ARM_ARCH_TIMER_EVTSTREAM=y
 # CONFIG_ARM_TIMER_SP804 is not set
-CONFIG_CLKSRC_ARM_GLOBAL_TIMER_SCHED_CLOCK=y
 # CONFIG_ATMEL_PIT is not set
 # CONFIG_SH_TIMER_CMT is not set
 # CONFIG_SH_TIMER_MTU2 is not set
@@ -4472,7 +4462,6 @@ CONFIG_ARM_UNWIND=y
 # CONFIG_DEBUG_USER is not set
 # CONFIG_DEBUG_LL is not set
 CONFIG_DEBUG_IMX_UART_PORT=1
-CONFIG_DEBUG_VF_UART_PORT=1
 CONFIG_DEBUG_LL_INCLUDE="mach/debug-macro.S"
 # CONFIG_DEBUG_UART_8250 is not set
 # CONFIG_DEBUG_UART_BCM63XX is not set
